--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-/src/Practice_GUI_Files/
+
+
+/.idea/
+/COM 426 Assignment.iml
